# visar

./: .gitignore  BUILD_SUMMARY.md  CMakeLists.txt  README.md  VisionEngineConfig.cmake.in  vision_engine.h
examples/python_demo/: README.md  create_test.py  requirements.txt  run_test.bat  test_vision_engine.py  test_vision_engine_backup.py
examples/qt6_demo/: CMakeLists.txt
examples/qt6_demo/include/: InferenceWorker.h  MainWindow.h  ModelManager.h  OTADialog.h  PerformanceMonitor.h
examples/qt6_demo/resources/: resources.qrc
examples/qt6_demo/src/: InferenceWorker.cpp  MainWindow.cpp  ModelManager.cpp  OTADialog.cpp  PerformanceMonitor.cpp  main.cpp
include/vision_engine/: CMakeLists.txt  vision_engine.h  vision_engine_config.h.in
include/vision_engine/algorithms/: ve_algorithms.h  ve_detector.h  ve_fast_nms.h  ve_multi_scale.h  ve_nms.h  ve_preprocess.h  ve_tta.h
include/vision_engine/backends/: ve_onnx_backend.h  ve_tensorrt_backend.h  ve_tensorrt_int8.h
include/vision_engine/core/: ve_error.h  ve_memory_pool.h  ve_options.h  ve_types.h
include/vision_engine/inference/: ve_inference.h  ve_model.h  ve_result.h
include/vision_engine/ota/: ve_ota.h
include/vision_engine/quantization/: ve_quantization.h
models/: README.md
src/algorithms/: CMakeLists.txt  ve_algorithms.cpp
src/backends/: CMakeLists.txt
src/backends/onnx/: CMakeLists.txt  ve_onnx_backend.cpp
src/backends/tensorrt/: CMakeLists.txt  ve_tensorrt_backend.cpp
src/core/: CMakeLists.txt  ve_engine.cpp  ve_logger.cpp  ve_logger.h  ve_memory.cpp  ve_memory.h  ve_options.cpp  ve_thread_pool.cpp  ve_thread_pool.h
src/inference/: CMakeLists.txt  ve_inference.cpp  ve_inference_new.cpp  ve_model.cpp  ve_result.cpp
src/ota/: CMakeLists.txt  ve_ota.cpp  ve_ota_downloader.cpp  ve_security.cpp
src/quantization/: CMakeLists.txt  ve_quantization.cpp
tests/: CMakeLists.txt  ve_inference_test.cpp  ve_model_test.cpp
tools/model_converter/: CMakeLists.txt  main.cpp  onnx_converter.cpp  quantize_tool.cpp
tools/quantization/: quantize_model.py
